--- a/package.json
+++ b/package.json
@@ -48,6 +48,21 @@
 		"@splash-cli/is-month": "^1.1.1",
 		"@splash-cli/parse-unsplash-id": "^0.0.1",
 		"@splash-cli/show-copy": "^1.1.0",
+		"@types/conf": "^2.1.0",
+		"@types/figures": "^2.0.0",
+		"@types/first-run": "^1.2.0",
+		"@types/got": "^9.4.0",
+		"@types/inquirer": "^0.0.43",
+		"@types/jsdom": "^12.2.1",
+		"@types/lodash": "^4.14.120",
+		"@types/meow": "^5.0.0",
+		"@types/mkdirp": "^0.5.2",
+		"@types/ms": "^0.7.30",
+		"@types/normalize-url": "^3.3.0",
+		"@types/ora": "^3.0.0",
+		"@types/terminal-link": "^1.1.0",
+		"@types/update-notifier": "^2.5.0",
+		"@types/wallpaper": "^2.5.0",
 		"babel-polyfill": "^6.26.0",
 		"chalk": "^2.4.1",
 		"conf": "^1.4.0",
