--- a/package.json
+++ b/package.json
@@ -64,6 +64,24 @@
 		"@splash-cli/is-month": "^1.1.1",
 		"@splash-cli/parse-unsplash-id": "^0.0.1",
 		"@splash-cli/show-copy": "^1.1.0",
+		"@types/chalk": "^2.2.0",
+		"@types/cli-table": "^0.3.0",
+		"@types/conf": "^3.0.0",
+		"@types/dotenv": "^8.2.0",
+		"@types/figures": "^3.0.1",
+		"@types/first-run": "^2.0.1",
+		"@types/got": "^9.6.9",
+		"@types/inquirer": "^6.5.0",
+		"@types/is-image": "^3.0.0",
+		"@types/lodash": "^4.14.149",
+		"@types/meow": "^5.0.0",
+		"@types/mkdirp": "^0.5.2",
+		"@types/node": "^13.1.7",
+		"@types/normalize-url": "^4.2.0",
+		"@types/ora": "^3.2.0",
+		"@types/terminal-link": "^1.2.0",
+		"@types/update-notifier": "^2.5.0",
+		"@types/wallpaper": "^2.5.1",
 		"ava": "^1.4.1",
 		"babel-polyfill": "^6.26.0",
 		"chalk": "^2.4.1",
@@ -106,6 +124,8 @@
 		"babel-preset-env": "^1.6.1",
 		"cp-cli": "^2.0.0",
 		"eslint": "4.x",
+		"eslint-config-prettier": "^6.9.0",
+		"prettier-eslint": "^9.0.1",
 		"rimraf": "^2.6.3"
 	},
 	"ava": {
