--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,23 +10,13 @@
 		"codeFrame": true,
 		"allowImportExportEverywhere": false
 	},
+
+	"extends": "prettier",
 	"rules": {
-		"indent": [
-            "error",
-            "tab"
-        ],
-		"linebreak-style": [
-            "error",
-            "unix"
-        ],
-		"quotes": [
-            "error",
-            "single"
-        ],
-		"semi": [
-            "error",
-            "always"
-		],
+		"indent": ["error", "tab"],
+		"linebreak-style": ["error", "unix"],
+		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
 		"no-undef": "error",
 		"no-duplicate-imports": "error",
 		"no-else-return": "error",
