--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"@splash-cli/is-month": "^1.1.1",
 		"@splash-cli/parse-unsplash-id": "^0.0.1",
 		"@splash-cli/show-copy": "^1.1.0",
-		"ava": "^1.4.1",
+		"ava": "3.12.1",
 		"babel-polyfill": "^6.26.0",
 		"chalk": "^2.4.1",
 		"cli-table": "^0.3.1",
@@ -67,17 +67,17 @@
 		"cross-env": "^6.0.3",
 		"dotenv": "^6.2.0",
 		"figures": "^2.0.0",
-		"first-run": "^1.2.0",
+		"first-run": "2.0.0",
 		"fuzzy": "^0.1.3",
 		"got": "^8.3.1",
 		"image-size": "^0.7.4",
 		"inquirer": "^5.2.0",
 		"inquirer-autocomplete": "^0.12.2",
 		"is-image": "^2.0.0",
-		"isomorphic-fetch": "^2.2.1",
+		"isomorphic-fetch": "3.0.0",
 		"jsdom": "^11.10.0",
 		"lodash": "^4.17.10",
-		"meow": "^5.0.0",
+		"meow": "7.1.1",
 		"mkdirp": "^0.5.1",
 		"ms": "^2.1.1",
 		"normalize-url": "^2.0.1",
