--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
 		"baeutiful"
 	],
 	"dependencies": {
-		"@babel/cli": "^7.12.1",
-		"@babel/core": "^7.12.3",
-		"@babel/preset-env": "^7.12.1",
+		"@babel/cli": "^7.12.10",
+		"@babel/core": "^7.12.10",
+		"@babel/preset-env": "^7.12.11",
 		"@babel/runtime": "^7.12.1",
 		"@sentry/node": "5.15.5",
 		"@splash-cli/is-month": "^1.1.1",
@@ -95,11 +95,15 @@
 		"@babel/plugin-proposal-class-properties": "^7.12.1",
 		"@babel/plugin-transform-runtime": "^7.12.1",
 		"@babel/plugin-transform-spread": "^7.2.2",
+		"@babel/preset-typescript": "^7.12.7",
+		"@types/node": "^14.14.21",
 		"babel-eslint": "8",
-		"babel-plugin-module-resolver": "^4.0.0",
+		"babel-loader": "^8.2.2",
+		"babel-plugin-module-resolver": "^4.1.0",
 		"babel-plugin-transform-inline-environment-variables": "^0.4.3",
 		"cp-cli": "^2.0.0",
 		"eslint": "4.x",
-		"rimraf": "^2.6.3"
+		"rimraf": "^2.6.3",
+		"typescript": "^4.1.3"
 	}
 }
