started transition of utilities to typescript

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"dependencies": {
 		"@babel/cli": "^7.12.10",
 		"@babel/core": "^7.12.10",
+		"@babel/polyfill": "^7.12.1",
 		"@babel/preset-env": "^7.12.11",
 		"@babel/runtime": "^7.12.1",
 		"@sentry/node": "5.15.5",
@@ -65,7 +66,7 @@
 		"babel-polyfill": "^6.26.0",
 		"chalk": "^2.4.1",
 		"cli-table": "^0.3.1",
-		"conf": "^1.4.0",
+		"conf": "^9.0.0",
 		"cross-env": "^6.0.3",
 		"dotenv": "^6.2.0",
 		"figures": "^2.0.0",
@@ -96,7 +97,12 @@
 		"@babel/plugin-transform-runtime": "^7.12.1",
 		"@babel/plugin-transform-spread": "^7.2.2",
 		"@babel/preset-typescript": "^7.12.7",
+		"@types/conf": "^3.0.0",
+		"@types/is-image": "^3.0.0",
+		"@types/lodash": "^4.14.167",
 		"@types/node": "^14.14.21",
+		"@types/ora": "^3.2.0",
+		"@types/update-notifier": "^5.0.0",
 		"babel-eslint": "8",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-module-resolver": "^4.1.0",
