--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,14 @@
 		"es6": true,
 		"node": true
 	},
-	"parser": "babel-eslint",
-	"parserOptions": {
-		"ecmaVersion": 2018,
-		"sourceType": "module",
-		"codeFrame": true,
-		"allowImportExportEverywhere": false
-	},
+	"parser": "@typescript-eslint/parser",
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended"
+	],
+  "plugins": [
+    "@typescript-eslint",
+  ],
 	"rules": {
 		"indent": ["warn", "tab"],
 		"linebreak-style": ["error", "unix"],
