--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "splash-cli",
-	"version": "3.4.15",
-	"main": "build/extra/Unsplash.js",
-	"type": "commonjs",
+	"version": "3.5.0-alpha",
 	"readme": "README.md",
 	"homepage": "https://splash-cli.app",
 	"description": "Get beautiful wallpapers from unsplash.",
@@ -14,32 +12,11 @@
 	"author": {
 		"email": "fedevitale99@gmail.com",
 		"name": "Federico Vitale",
-		"url": "https://github.com/rawnly"
+		"url": "https://github.com/Rawnly"
 	},
-	"scripts": {
-		"build": "babel src -d build --source-maps",
-		"copyHTML": "rm -rf build/pages && cp -rf src/pages build",
-		"start": "node build/bin/index.js --enable-source-maps",
-		"start.norebuild": "node build/bin/index.js",
-		"fix": "eslint src/**/*.js --color --fix",
-		"test": "jest",
-		"prebuild": "rm -rf build && npm run fix",
-		"prestart": "npm run build",
-		"postbuild": "npm run copyHTML",
-		"prepublish": "npm run fix"
-	},
-	"pkg": {
-		"scripts": "build/**/*.js"
-	},
-	"bin": {
-		"splash": "build/bin/index.js"
-	},
+	"scripts": {},
 	"publishConfig": {
 		"access": "public"
-	},
-	"engines": {
-		"node": ">=6.11.4",
-		"npm": ">=3.10.10"
 	},
 	"keywords": [
 		"unsplash",
@@ -54,52 +31,26 @@
 		"baeutiful"
 	],
 	"dependencies": {
-		"@babel/cli": "^7.12.1",
-		"@babel/core": "^7.12.3",
-		"@babel/preset-env": "^7.12.1",
-		"@babel/runtime": "^7.12.1",
-		"@sentry/node": "5.15.5",
-		"@splash-cli/is-month": "^1.1.1",
-		"@splash-cli/parse-unsplash-id": "^0.0.1",
-		"@splash-cli/show-copy": "^1.1.0",
-		"babel-polyfill": "^6.26.0",
-		"chalk": "^2.4.1",
-		"cli-table": "^0.3.1",
-		"conf": "^1.4.0",
-		"cross-env": "^6.0.3",
-		"dotenv": "^6.2.0",
-		"figures": "^2.0.0",
-		"first-run": "^2.0.0",
-		"fuzzy": "^0.1.3",
-		"got": "^8.3.1",
-		"image-size": "^0.7.4",
-		"inquirer": "^5.2.0",
-		"inquirer-autocomplete": "^0.12.2",
-		"is-image": "^2.0.0",
-		"isomorphic-fetch": "^3.0.0",
-		"jest": "^26.6.3",
-		"jsdom": "^11.10.0",
-		"lodash": "^4.17.10",
-		"meow": "^8.0.0",
-		"mkdirp": "^0.5.1",
-		"ms": "^2.1.1",
-		"normalize-url": "^2.0.1",
-		"ora": "^2.1.0",
-		"sharp": "^0.25.4",
-		"simple-download": "^0.6.0",
-		"terminal-link": "^1.1.0",
-		"update-notifier": "^2.5.0",
-		"wallpaper": "^4.2.0"
+		"axios": "^0.21.1",
+		"chalk": "^4.1.1",
+		"conf": "^10.0.1",
+		"date-fns": "^2.22.1",
+		"dotenv": "^10.0.0",
+		"fp-ts": "^2.10.5",
+		"io-ts": "^2.2.16",
+		"is-image": "^3.0.0",
+		"ms": "^2.1.3",
+		"ora": "^5.4.1",
+		"sharp": "^0.28.3",
+		"terminal-link": "^3.0.0",
+		"wallpaper": "^5.0.1"
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.12.1",
-		"@babel/plugin-transform-runtime": "^7.12.1",
-		"@babel/plugin-transform-spread": "^7.2.2",
-		"babel-eslint": "8",
-		"babel-plugin-module-resolver": "^4.0.0",
-		"babel-plugin-transform-inline-environment-variables": "^0.4.3",
-		"cp-cli": "^2.0.0",
-		"eslint": "4.x",
-		"rimraf": "^2.6.3"
+		"@types/node": "^15.12.4",
+		"jest": "^27.0.5",
+		"ts-jest": "^27.0.3",
+		"ttypescript": "^1.5.12",
+		"typescript": "^4.3.4",
+		"typescript-transform-paths": "^3.0.0"
 	}
 }
