--- a/package.json
+++ b/package.json
@@ -41,18 +41,38 @@
 		"conf": "^10.0.1",
 		"date-fns": "^2.22.1",
 		"dotenv": "^10.0.0",
+		"figures": "^3.2.0",
+		"first-run": "^2.0.0",
 		"fp-ts": "^2.10.5",
 		"io-ts": "^2.2.16",
 		"is-image": "^3.0.0",
+		"lodash.sample": "^4.2.1",
+		"meow": "^10.0.1",
 		"ms": "^2.1.3",
+		"node-fetch": "^2.6.1",
 		"ora": "^5.4.1",
+		"rx-js": "^0.0.0",
 		"sharp": "^0.28.3",
+		"simple-download": "^0.6.0",
 		"terminal-link": "^3.0.0",
+		"ts-pattern": "^3.1.7",
+		"type-fest": "^1.2.1",
+		"unsplash-js": "^7.0.11",
+		"update-notifier": "^5.1.0",
 		"wallpaper": "^5.0.1"
 	},
 	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/figures": "^3.0.1",
+		"@types/first-run": "^2.0.1",
 		"@types/jest": "^26.0.23",
+		"@types/lodash.sample": "^4.2.6",
+		"@types/ms": "^0.7.31",
 		"@types/node": "^15.12.4",
+		"@types/node-fetch": "^2.5.10",
+		"@types/sharp": "^0.28.3",
+		"@types/unsplash-js": "^7.0.0",
+		"@types/update-notifier": "^5.0.0",
 		"jest": "^27.0.5",
 		"ts-jest": "^27.0.3",
 		"ttypescript": "^1.5.12",
